# glint

./: .gitignore  README.en.md  README.md  pyproject.toml
configs/: omlx.env.example
docs/plans/: 2026-03-22-translategemma-cli-poc.md  2026-03-23-omlx-launchagent.md  2026-03-26-backend-status-menu-design.md  2026-03-26-backend-status-menu.md  2026-03-26-glint-brand-refresh-design.md  2026-03-26-glint-brand-refresh.md  2026-03-26-macos-quick-translate-design.md  2026-03-26-macos-quick-translate-dual-input-design.md  2026-03-26-macos-quick-translate-dual-input.md  2026-03-26-macos-quick-translate-polish-design.md  2026-03-26-macos-quick-translate-polish.md  2026-03-26-macos-quick-translate.md  2026-03-27-api-client-decoupling-design.md  2026-03-27-api-client-decoupling.md  2026-03-27-app-i18n-string-catalog-design.md  2026-03-27-app-i18n-string-catalog.md  2026-03-27-backend-api-only-design.md  2026-03-27-backend-api-only.md  2026-03-27-backend-runtime-settings-design.md  2026-03-27-backend-runtime-settings.md  2026-03-27-dmg-release-packaging-design.md  (+13 more)
launchd/: com.hy-mt.omlx-restart.plist.template  com.hy-mt.omlx.plist.template
scripts/: api_smoke.py  build_dmg.sh  build_mac_app.sh  check_omlx_restart.py  install_launch_agent.sh  install_omlx_launch_agent.sh  repl_translate.py  restart_omlx.sh  restart_omlx_launch_agent.sh  smoke_cli.py  smoke_suite.py  start_omlx.sh  start_omlx_launch_agent.sh  start_omlx_tmux.sh  status_omlx.sh  status_omlx_launch_agent.sh  stop_omlx.sh  stop_omlx_launch_agent.sh  uninstall_omlx_launch_agent.sh
tests/: test_translate_gemma.py
(+172 files in other folders)
