[project]
name = "hy-mt-deploy"
version = "0.1.0"
description = "TranslateGemma local CLI PoC on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "huggingface_hub>=0.34,<1.0",
  "mlx-lm>=0.28",
  "transformers>=4.57,<4.58",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hy_mt_deploy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
